--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
     - name: print
       run: |
         echo falafel
-        echo ${secrets.TESTING}
+        echo "${{ secrets.TESTING }}"
