--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
         echo falafel
         echo "${{ secrets.TESTING }}"
         echo falafel123
-        echo ${SHHH}
+        echo ${SHHH:2}
